...
    val nodes: Map<String, List<MapNode>> = mapOf(
        "misty_peaks" to listOf(
            MapNode("mp-a7-fish", MapNodeCategory.FISH, 0.3665f, 0.0629f, areaNumber = "7"),
            MapNode("mp-a7-berries", MapNodeCategory.BERRIES, 0.2635f, 0.0730f, areaNumber = "7"),
            MapNode("mp-a7-bugs", MapNodeCategory.BUGS, 0.3248f, 0.0803f, areaNumber = "7"),
            MapNode("mp-a7-mushrooms", MapNodeCategory.MUSHROOMS, 0.3278f, 0.1236f, areaNumber = "7"),
            MapNode("mp-a4-yukumo-wood", MapNodeCategory.MISC, 0.7014f, 0.2001f, areaNumber = "4", label = "Yukumo Wood"),
            MapNode("mp-a4-plants", MapNodeCategory.PLANTS, 0.7337f, 0.2124f, areaNumber = "4"),
            MapNode("mp-a4-mining", MapNodeCategory.MINING, 0.6700f, 0.2600f, areaNumber = "4"),
            MapNode("mp-a4-berries", MapNodeCategory.BERRIES, 0.8097f, 0.2687f, areaNumber = "4"),
            MapNode("mp-a5-yukumo-wood", MapNodeCategory.MISC, 0.4267f, 0.2877f, areaNumber = "5", label = "Yukumo Wood"),
            MapNode("mp-a5-honey", MapNodeCategory.HONEY, 0.4718f, 0.3048f, areaNumber = "5"),
            MapNode("mp-a5-mushrooms", MapNodeCategory.MUSHROOMS, 0.3993f, 0.3288f, areaNumber = "5"),
...
